fix card on mobile

--- a/components/Card.module.css
+++ b/components/Card.module.css
@@ -7,6 +7,7 @@
   padding-top: 15px;
   padding-bottom: 15px;
   width: 380px;
+  min-height: 115px
 }
 
 @media screen and (max-width: 500px) {
