--- a/components/GraphCard.module.css
+++ b/components/GraphCard.module.css
@@ -1,6 +1,6 @@
 .graphContainer {
   width: 100%;
-  height: 5000px;
+  height: 430px;
 }
 
 @media screen and (min-width: 320px) {
