--- a/components/StatsCard.module.css
+++ b/components/StatsCard.module.css
@@ -26,7 +26,7 @@
 .statValue {
   display: inline-block;
   min-width: 65px;
-  margin-bottom: 5px;
+  margin-bottom: 4px;
 }
 
 .statName {
